ejercicio técnico Paula Tormo

--- a/borrador_tecnico.ipynb
+++ b/borrador_tecnico.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 60,
    "id": "49bb0a67",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se ha añadido teclado al inventario,tiene un precio de 100.0 y una cantidad de 1.\n"
+      "Se ha añadido raton al inventario,tiene un precio de 15.0 y una cantidad de 4.\n"
      ]
     }
    ],
@@ -1231,24 +1231,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 58,
    "id": "aa74fb6f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['raton', 15.0, 4]"
-      ]
-     },
-     "execution_count": 180,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'producto' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m miluista \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(producto\u001b[38;5;241m.\u001b[39mvalues())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'producto' is not defined"
+     ]
     }
    ],
    "source": [
-    "list(producto.values()) #lo buscamos por indice(??"
+    "miluista = list(producto.values()) #lo buscamos por indice(??"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53573d02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1418,35 +1427,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "82d7e731",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not dict",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[199], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m valor_total \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m inventario:\n\u001b[1;32m----> 4\u001b[0m     precio \u001b[38;5;241m=\u001b[39m inventario[producto][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      5\u001b[0m     cantidad \u001b[38;5;241m=\u001b[39m inventario[producto][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m     valor_total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m precio \u001b[38;5;241m*\u001b[39m cantidad \n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not dict"
-     ]
-    }
-   ],
-   "source": [
-    "valor_total = 0\n",
-    "\n",
-    "for producto in inventario:\n",
-    "    precio = inventario[producto]['precio']\n",
-    "    cantidad = inventario[producto]['cantidad']\n",
-    "    valor_total += precio * cantidad \n",
-    "\n",
-    "    print(valor_total)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "25e2f11d",
    "metadata": {},
@@ -1531,9 +1511,10 @@
     "for producto in inventario: # si esto pasa por todos los productos, coge la multiplicacion de todo?\n",
     "    #entonces luego puedo sumar??? #listcomprehension no entiendo next\n",
     "    valor = (producto['precio'] * producto['cantidad'] for producto in inventario)\n",
-    "    valor_total = sum(int(valor))\n",
+    "    valor_total = sum(int(valor)) #cuanto es valor total???\n",
     "\n",
-    "    valor_total += valor\n",
+    "    valor_total += valor #no tiene sentido sumar y volver a sumar\n",
+    "    \n",
     "    print(valor_total)"
    ]
   },
@@ -1634,7 +1615,97 @@
    "id": "9e77cdca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#bonus\n",
+    "class TiendaOnline:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.clientes = {}\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def agregar_clientes(self, nombre, email,):\n",
+    "        \n",
+    "        nombre = nombre.capitalize()\n",
+    "\n",
+    "        if nombre not in self.clientes:\n",
+    "            self.clientes['nombre'] = {\"nombre\": nombre, \"email\": email, \"compras\": []} #compras es una lista vacía en el ejemplo\n",
+    "            print(f\"El cliente {nombre} ha sido añadido con el correo: {email}.\")\n",
+    "\n",
+    "    def ver_clientes(self):\n",
+    "        for nombre in self.clientes:\n",
+    "            # diccionario dentro de diccionario, nombre: values el diccionario de email y compras, neesita otra variable??\n",
+    "            print(f\" El cliente {nombre}, con correo {nombre['email']}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4ccc25e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mitienda = TiendaOnline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f81e77b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cliente Juan ha sido añadido con el correo: juan@gmail.com.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mitienda.agregar_clientes(\"Juan\", \"juan@gmail.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "328fac8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cliente Maria ha sido añadido con el correo: mariag22@gmail.com.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mitienda.agregar_clientes(\"maria\", \"mariag22@gmail.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "bdaee82c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mitienda\u001b[38;5;241m.\u001b[39mver_clientes()\n",
+      "Cell \u001b[1;32mIn[53], line 20\u001b[0m, in \u001b[0;36mTiendaOnline.ver_clientes\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mver_clientes\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m nombre \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclientes:\n\u001b[1;32m---> 20\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m El cliente \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnombre[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnombre\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, con correo \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnombre[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124memail\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "mitienda.ver_clientes()"
+   ]
   }
  ],
  "metadata": {
