--- a/ejerciciotecnico._paulatormoa.ipynb
+++ b/ejerciciotecnico._paulatormoa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "ca746d5c",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "    def __init__(self):\n",
     "\n",
     "        self.inventario = []\n",
-    "        self.ventas_totales = 0\n",
+    "        self.ventas_totales = 0.0 #pedían un valor float\n",
     "        \n",
     "\n",
     "    def agregar_productos(self,nombre, precio, cantidad):\n",
@@ -27,17 +27,17 @@
     "                print(f\"El producto {producto} ya existe, se ha actualizado a una cantidad de {producto['cantidad']}.\")\n",
     "                break # si encuentra el producto que se pare dentro del if, si no,que continue\n",
     "       else:\n",
-    "            producto_nuevo = {\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad}\n",
+    "            producto_nuevo = {\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad} #lo creamos con los mismos parámetros\n",
     "            self.inventario.append(producto_nuevo)\n",
     "            print(self.inventario)\n",
     "            print(f\"El producto {producto_nuevo['nombre']} ha sido añadido con éxito con una cantidad de {cantidad} y un precio de {precio}€.\")\n",
     "    \n",
-    "    def ver_inventario(self, producto):\n",
+    "    def ver_inventario(self):\n",
     "    \n",
     "        \"\"\"Esta función es para visualizar el inventario que tenemos.\"\"\"\n",
     "        \n",
     "        for producto in self.inventario:\n",
-    "            print(f\"Nombre: {producto['nombre']}, Precio: ${producto['precio']}, Cantidad {producto['cantidad']}\")\n",
+    "            print(f\"Nombre: {producto['nombre']}, Precio: ${producto['precio']}, Cantidad: {producto['cantidad']}\")\n",
     "             \n",
     "    \n",
     "    \n",
@@ -49,31 +49,38 @@
     "        nombre = nombre.lower()\n",
     "\n",
     "        for producto in self.inventario:\n",
-    "            if nombre == producto[\"nombre\"]:\n",
-    "                  print(f\"Producto: {producto['nombre']}, Precio ${producto['precio']}, Cantidad {producto['cantidad']}\")\n",
+    "\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                  \n",
+    "                  print(f\"Nombre: {producto['nombre']}, Precio ${producto['precio']}, Cantidad {producto['cantidad']}\")\n",
     "                  return # para que vuelva si lo encuentra en el inventario\n",
     "\n",
     "        print(f\"El producto {nombre} no aparece en el inventario. Pruebe con otro.\") \n",
     "    \n",
     "    def actualizar_stock(self, nombre, cantidad):\n",
     "        \n",
-    "        \"\"\"Actualización de la cantidad de stock de los productos del inventario.\n",
+    "        \"\"\"Actualización de la cantidad de stock de los productos del inventario. Hay que poner:nombre,cantidad.\n",
     "        Los número positivos suman y los negativos, restan stock. Nos imprime el stock actualizado, después de cada acción.\"\"\"\n",
     "\n",
     "        nombre = nombre.lower()\n",
     "\n",
     "        for producto in self.inventario:\n",
+    "\n",
     "            if producto['nombre'] == nombre: \n",
     "                if cantidad > 0:\n",
     "                    producto['cantidad'] += cantidad\n",
     "                    print(f\"La cantidad añadida ha sido de {cantidad} más, actualmente hay {producto['cantidad']} en el inventario.\")\n",
     "\n",
     "                elif cantidad < 0:\n",
-    "                    if producto['cantidad'] >= abs(cantidad):#para poder hacer el valor positivo y restarlo\n",
+    "                    if producto['cantidad'] >= abs(cantidad):#para poder hacer el valor positivo y compararlo, para después restar\n",
     "                        producto['cantidad'] += cantidad \n",
-    "                        print(f\"La cantidad añadida ha sido de {cantidad} menos, actualmente hay {producto['cantidad']} en el inventario.\")\n",
-    "                    else:\n",
-    "                        print(\"No hay suficiente stock para restarlo al stock actual. Pruebe con una cantidad menor.\")\n",
+    "                        print(f\"La cantidad proporcionada ha sido de {cantidad}, actualmente hay {producto['cantidad']} en el inventario.\")\n",
+    "                \n",
+    "                elif cantidad == 0:\n",
+    "                          print(f\"La cantidad no puede realizar cambios, pruebe con otra cantidad.\")  \n",
+    "        \n",
+    "                else:\n",
+    "                    print(\"No hay suficiente stock para restarlo al stock actual. Pruebe con una cantidad menor.\")\n",
     "        \n",
     "                return \n",
     "            \n",
@@ -81,7 +88,8 @@
     "            print(\"Este producto no existe en el inventario. Pruebe con otro producto.\")   \n",
     "\n",
     "    def eliminar_producto(self, nombre):\n",
-    "        \"\"\"Esta función es para eliminar productos basados en el nombre.\"\"\"\n",
+    "        \"\"\"Esta función es para eliminar productos proporcionando el nombre.\"\"\"\n",
+    "\n",
     "        nombre = nombre.lower()\n",
     "\n",
     "        for producto in self.inventario:\n",
@@ -96,13 +104,14 @@
     "    def calcular_valor_inventario(self):\n",
     "\n",
     "        \"\"\"Esta función nos calcula y muestra el valor total de nuestro inventario.\"\"\"\n",
-    "        valor_total_inventario = 0 #inicia en 0 y luego va añadiendo nuestras respectivas multiplicaciones\n",
+    "\n",
+    "        valor_total_inventario = 0 #inicia en 0 y luego va sumando nuestras respectivas multiplicaciones\n",
     "        for producto in self.inventario:\n",
     "            valor = producto['precio'] * producto['cantidad']\n",
     "            \n",
     "            valor_total_inventario += valor\n",
     "\n",
-    "        print(f\"El valor total del inventario es {valor_total_inventario}.\") #de esta manera suma el total\n",
+    "        print(f\"El valor total del inventario es {valor_total_inventario}.\") \n",
     "\n",
     "    \n",
     "    \n",
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 62,
    "id": "fb71261e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 63,
    "id": "5808677b",
    "metadata": {},
    "outputs": [
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 64,
    "id": "02545722",
    "metadata": {},
    "outputs": [
@@ -158,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 65,
    "id": "8f60ce8e",
    "metadata": {},
    "outputs": [
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 66,
    "id": "f60705b8",
    "metadata": {},
    "outputs": [
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 67,
    "id": "81e7120d",
    "metadata": {},
    "outputs": [
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 68,
    "id": "0fa1f1a1",
    "metadata": {},
    "outputs": [
@@ -226,10 +235,10 @@
        "  {'nombre': 'impresora', 'precio': 40, 'cantidad': 2},\n",
        "  {'nombre': 'raton', 'precio': 15.5, 'cantidad': 3},\n",
        "  {'nombre': 'teclado', 'precio': 150, 'cantidad': 20}],\n",
-       " 'ventas_totales': 0}"
+       " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 69,
    "id": "5f1dfef3",
    "metadata": {},
    "outputs": [
@@ -248,20 +257,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: ordenador, Precio: $600, Cantidad 8\n",
-      "Nombre: impresora, Precio: $40, Cantidad 2\n",
-      "Nombre: raton, Precio: $15.5, Cantidad 3\n",
-      "Nombre: teclado, Precio: $150, Cantidad 20\n"
+      "Nombre: ordenador, Precio: $600, Cantidad: 8\n",
+      "Nombre: impresora, Precio: $40, Cantidad: 2\n",
+      "Nombre: raton, Precio: $15.5, Cantidad: 3\n",
+      "Nombre: teclado, Precio: $150, Cantidad: 20\n"
      ]
     }
    ],
    "source": [
-    "tecnologiatenda.ver_inventario(\"ordenador\")"
+    "tecnologiatenda.ver_inventario()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 70,
    "id": "890d91b5",
    "metadata": {},
    "outputs": [
@@ -269,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Producto: ordenador, Precio $600, Cantidad 8\n"
+      "Nombre: ordenador, Precio $600, Cantidad 8\n"
      ]
     }
    ],
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 71,
    "id": "a4df8cee",
    "metadata": {},
    "outputs": [
@@ -297,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 72,
    "id": "92522f1d",
    "metadata": {},
    "outputs": [
@@ -315,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 73,
    "id": "75687036",
    "metadata": {},
    "outputs": [
@@ -323,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La cantidad añadida ha sido de -1 menos, actualmente hay 2 en el inventario.\n"
+      "La cantidad proporcionada ha sido de -1, actualmente hay 2 en el inventario.\n"
      ]
     }
    ],
@@ -333,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 74,
    "id": "34e23f19",
    "metadata": {},
    "outputs": [
@@ -351,7 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 79,
+   "id": "4f38ef82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad no puede realizar cambios, pruebe con otra cantidad.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tecnologiatenda.actualizar_stock(\"Impresora\", 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "c559750b",
    "metadata": {},
    "outputs": [
@@ -359,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No aparece en el inventario.\n"
+      "El producto ordenador ha sido eliminado. El inventario se ha actualizado.\n"
      ]
     }
    ],
@@ -369,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 76,
    "id": "4c1d2df0",
    "metadata": {},
    "outputs": [
@@ -387,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 77,
    "id": "135e1105",
    "metadata": {},
    "outputs": [
@@ -397,10 +424,10 @@
        "{'inventario': [{'nombre': 'impresora', 'precio': 40, 'cantidad': 2},\n",
        "  {'nombre': 'raton', 'precio': 15.5, 'cantidad': 4},\n",
        "  {'nombre': 'teclado', 'precio': 150, 'cantidad': 20}],\n",
-       " 'ventas_totales': 0}"
+       " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 78,
    "id": "564dcfd3",
    "metadata": {},
    "outputs": [
@@ -419,8 +446,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El valor total del inventario es 80.\n",
-      "El valor total del inventario es 142.0.\n",
       "El valor total del inventario es 3142.0.\n"
      ]
     }
