Ejercicio técnico Paula Tormo

--- a/ejerciciotecnico._paulatormoa.ipynb
+++ b/ejerciciotecnico._paulatormoa.ipynb
@@ -453,6 +453,63 @@
    "source": [
     "tecnologiatenda.calcular_valor_inventario()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "0cc89233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bonus\n",
+    "class TiendaOnline:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.clientes = {}\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def agregar_clientes(self, nombre, email,):\n",
+    "        \n",
+    "        nombre = nombre.capitalize()\n",
+    "\n",
+    "        if nombre not in self.clientes:\n",
+    "            self.clientes['nombre'] = {\"nombre\": nombre, \"email\": email, \"compras\": []} #compras es una lista vacía en el ejemplo\n",
+    "            print(f\"El cliente {nombre} ha sido añadido con el correo: {email}.\")\n",
+    "\n",
+    "    def ver_clientes(self):\n",
+    "        for nombre in self.clientes:\n",
+    "            # diccionario dentro de diccionario, nombre: values el diccionario de email y compras, neesita otra variable??\n",
+    "            print(f\" El cliente {nombre}, con correo {nombre['email']}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "9c11b346",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mitienda = TiendaOnline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "8469fde9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cliente Juan ha sido añadido con el correo: juan23@gmail.com.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mitienda.agregar_clientes(\"Juan\", \"juan23@gmail.com\")"
+   ]
   }
  ],
  "metadata": {
