Ejercicio técnico: Paula Tormo

--- a/ejerciciotecnico._paulatormoa.ipynb
+++ b/ejerciciotecnico._paulatormoa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 107,
    "id": "ca746d5c",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "            producto_nuevo = {\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad} #lo creamos con los mismos parámetros\n",
     "            self.inventario.append(producto_nuevo)\n",
     "            print(self.inventario)\n",
-    "            print(f\"El producto {producto_nuevo['nombre']} ha sido añadido con éxito con una cantidad de {cantidad} y un precio de {precio}€.\")\n",
+    "            print(f\"El producto {producto_nuevo['nombre']} ha sido añadido con éxito con una cantidad de {cantidad} y un precio de ${precio}.\")\n",
     "    \n",
     "    def ver_inventario(self):\n",
     "    \n",
@@ -111,7 +111,7 @@
     "            \n",
     "            valor_total_inventario += valor\n",
     "\n",
-    "        print(f\"El valor total del inventario es {valor_total_inventario}.\") \n",
+    "        print(f\"El valor total del inventario es ${valor_total_inventario}.\") \n",
     "\n",
     "    \n",
     "    \n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 108,
    "id": "fb71261e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "id": "5808677b",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "[{'nombre': 'ordenador', 'precio': 600, 'cantidad': 4}]\n",
-      "El producto ordenador ha sido añadido con éxito con una cantidad de 4 y un precio de 600€.\n"
+      "El producto ordenador ha sido añadido con éxito con una cantidad de 4 y un precio de $600.\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 110,
    "id": "02545722",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 111,
    "id": "8f60ce8e",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "output_type": "stream",
      "text": [
       "[{'nombre': 'ordenador', 'precio': 600, 'cantidad': 8}, {'nombre': 'impresora', 'precio': 40, 'cantidad': 2}]\n",
-      "El producto impresora ha sido añadido con éxito con una cantidad de 2 y un precio de 40€.\n"
+      "El producto impresora ha sido añadido con éxito con una cantidad de 2 y un precio de $40.\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 112,
    "id": "f60705b8",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
      "output_type": "stream",
      "text": [
       "[{'nombre': 'ordenador', 'precio': 600, 'cantidad': 8}, {'nombre': 'impresora', 'precio': 40, 'cantidad': 2}, {'nombre': 'raton', 'precio': 15.5, 'cantidad': 3}]\n",
-      "El producto raton ha sido añadido con éxito con una cantidad de 3 y un precio de 15.5€.\n"
+      "El producto raton ha sido añadido con éxito con una cantidad de 3 y un precio de $15.5.\n"
      ]
     }
    ],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 113,
    "id": "81e7120d",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
      "output_type": "stream",
      "text": [
       "[{'nombre': 'ordenador', 'precio': 600, 'cantidad': 8}, {'nombre': 'impresora', 'precio': 40, 'cantidad': 2}, {'nombre': 'raton', 'precio': 15.5, 'cantidad': 3}, {'nombre': 'teclado', 'precio': 150, 'cantidad': 20}]\n",
-      "El producto teclado ha sido añadido con éxito con una cantidad de 20 y un precio de 150€.\n"
+      "El producto teclado ha sido añadido con éxito con una cantidad de 20 y un precio de $150.\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 114,
    "id": "0fa1f1a1",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 115,
    "id": "5f1dfef3",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 116,
    "id": "890d91b5",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 117,
    "id": "a4df8cee",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 118,
    "id": "92522f1d",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 119,
    "id": "75687036",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 120,
    "id": "34e23f19",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 121,
    "id": "4f38ef82",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 130,
+   "id": "f59c63e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este producto no existe en el inventario. Pruebe con otro producto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tecnologiatenda.actualizar_stock(\"perro\",3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "id": "c559750b",
    "metadata": {},
    "outputs": [
@@ -396,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 123,
    "id": "4c1d2df0",
    "metadata": {},
    "outputs": [
@@ -414,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 124,
    "id": "135e1105",
    "metadata": {},
    "outputs": [
@@ -427,7 +445,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 125,
    "id": "564dcfd3",
    "metadata": {},
    "outputs": [
@@ -446,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El valor total del inventario es 3142.0.\n"
+      "El valor total del inventario es $3142.0.\n"
      ]
     }
    ],
@@ -456,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 126,
    "id": "0cc89233",
    "metadata": {},
    "outputs": [],
@@ -485,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 127,
    "id": "9c11b346",
    "metadata": {},
    "outputs": [],
@@ -495,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 128,
    "id": "8469fde9",
    "metadata": {},
    "outputs": [
